Added Registration and Login connectivity

--- a/Mango.Web/Views/Auth/Login.cshtml
+++ b/Mango.Web/Views/Auth/Login.cshtml
@@ -4,7 +4,7 @@
     <div class="container border p-4">
         <h1 class="text-center">Login</h1>
 
-        <div class="row-text-center">
+        <div class="text-center">
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
         <div class="row">
