--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
-                        @if (!User.Identity.IsAuthenticated)
+                        @if (User.Identity != null && !User.Identity.IsAuthenticated)
                         {
                             <li class="navitem">
                                 <a class="nav-link" asp-controller="Auth" asp-action="Login">Login</a>
