--- a/Mango.Web/Views/Auth/Login.cshtml
+++ b/Mango.Web/Views/Auth/Login.cshtml
@@ -3,16 +3,14 @@
 <form method="post">
     <div class="container border p-4">
         <h1 class="text-center">Login</h1>
-
-        <div class="text-center">
-            <div asp-validation-summary="All" class="text-danger"></div>
-        </div>
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3 pb-2">
                 <input asp-for="UserName" class="form-control" placeholder="UserName..." />
+                <span asp-validation-for="UserName" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
                 <input asp-for="Password" type="password" class="form-control" placeholder="Password..." />
+                <span asp-validation-for="Password" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
                 <button type="submit" class="form-control btn btn-success" value="Submit">Login</button>
@@ -21,3 +19,6 @@
     </div>
 </form>
 
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
